--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
       position: relative;
       overflow: hidden;
       cursor: pointer;
-      /* Removed hover transform and shadow */
     }
 
     .video-thumb {
@@ -75,7 +74,6 @@
       left: 0;
       width: 100%;
       padding: 0.3rem 0.5rem;
-      background: rgba(0, 0, 0, 0.6);
       color: #fff;
       font-size: 0.9rem;
       text-align: center;
@@ -84,14 +82,9 @@
       line-height: 1.2;
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
-      transition: background 0.3s ease, font-size 0.3s ease;
-    }
 
-    @media (min-width: 768px) {
-      .video-item:hover .video-title {
-        background: rgba(0, 0, 0, 0.8);
-        font-size: 1rem;
-      }
+      /* Subtle gradient background for readability */
+      background: linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0));
     }
 
     @media (max-width: 480px) {
