--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
       line-height: 1.2;
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
-
-      /* Subtle gradient background for readability */
       background: linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0));
     }
 
@@ -128,7 +126,6 @@
     </a>
   </div>
 
-  <!-- Load YouTube IFrame API -->
   <script src="https://www.youtube.com/iframe_api"></script>
 
   <script>
@@ -158,7 +155,6 @@
     }
     loadChannelLogo();
 
-    // Load videos
     async function loadVideos() {
       if (loading) return;
       loading = true;
@@ -173,7 +169,9 @@
         data.items.forEach(item => {
           if (item.id.kind === "youtube#video" && item.snippet && item.snippet.liveBroadcastContent === "none") {
             const vid = item.id.videoId;
-            const thumb = item.snippet.thumbnails.high.url;
+
+            // Use maxres thumbnail if available
+            const thumb = item.snippet.thumbnails.maxres?.url || item.snippet.thumbnails.high.url;
 
             const container = document.createElement("div");
             container.className = "video-item";
@@ -265,7 +263,7 @@
     window.addEventListener("resize", checkIfNeedMoreVideos);
     window.addEventListener("load", checkIfNeedMoreVideos);
 
-    function onYouTubeIframeAPIReady() { /* required callback */ }
+    function onYouTubeIframeAPIReady() {}
   </script>
 
 </body>
