--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
       color: #fff;
       font-family: 'Bebas Neue', Arial, sans-serif;
       min-height: 100vh;
-      text-align: center;
       display: flex;
       flex-direction: column;
     }
 
+    /* HERO */
     .hero { flex: 2; display: flex; justify-content: center; align-items: center; padding: 2rem; }
     .hero-logo { width: 200px; max-width: 70%; opacity: 0.9; display: block; margin: 0 auto; }
 
+    /* VIDEOS */
     .videos-section { flex: 1; background: #111; padding: 1rem; overflow-y: auto; }
     .videos-section h2 { font-size: 2.3rem; margin-bottom: 1rem; }
 
@@ -40,21 +41,31 @@
 
     .video-item {
       background: #000;
-      padding: 1rem;
-      border-radius: 10px;
       position: relative;
       overflow: hidden;
       cursor: pointer;
-    }
-
-    .video-thumb {
       width: 100%;
       border-radius: 10px;
-      display: block;
+      transition: transform 0.3s ease, opacity 0.5s ease;
+      opacity: 0; /* start hidden for fade-in */
+    }
+
+    .video-item.visible {
+      opacity: 1; /* fade in effect */
+    }
+
+    .video-thumb, iframe {
+      width: 100%;
       aspect-ratio: 16/9;
+      border-radius: 10px;
       object-fit: cover;
-      opacity: 0.85;
-      transition: opacity 0.3s ease;
+      display: block;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .video-item:hover .video-thumb {
+      transform: scale(1.03);
+      opacity: 0.95;
     }
 
     .play-overlay {
@@ -66,6 +77,12 @@
       color: rgba(255,255,255,0.85);
       pointer-events: none;
       text-shadow: 0 0 20px #000;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .video-item:hover .play-overlay {
+      transform: translate(-50%, -50%) scale(1.1);
+      opacity: 1;
     }
 
     .video-title {
@@ -77,29 +94,11 @@
       color: #fff;
       font-size: 0.9rem;
       text-align: center;
-      overflow: hidden;
-      white-space: normal; /* wrap */
+      white-space: normal;
       line-height: 1.2;
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
       background: linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0));
-    }
-
-    @media (max-width: 480px) {
-      .video-title { font-size: 0.8rem; }
-    }
-
-    iframe { width: 100%; aspect-ratio: 16/9; border-radius: 10px; border: none; display: block; }
-    iframe.preview {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-      border-radius: 10px;
-      pointer-events: none;
-      z-index: 10;
     }
 
     .footer { padding: 2rem 1rem; font-size: 1.2rem; }
@@ -169,8 +168,6 @@
         data.items.forEach(item => {
           if (item.id.kind === "youtube#video" && item.snippet && item.snippet.liveBroadcastContent === "none") {
             const vid = item.id.videoId;
-
-            // Use maxres thumbnail if available
             const thumb = item.snippet.thumbnails.maxres?.url || item.snippet.thumbnails.high.url;
 
             const container = document.createElement("div");
@@ -183,6 +180,10 @@
             `;
             videoListDiv.appendChild(container);
 
+            // Fade-in
+            setTimeout(() => container.classList.add("visible"), 50);
+
+            // Hover preview for desktop
             if (window.innerWidth >= 768) {
               container.addEventListener("mouseenter", () => addHoverPreview(container, vid));
               container.addEventListener("mouseleave", () => removeHoverPreview(container));
@@ -192,26 +193,10 @@
           }
         });
 
-        observeLazyVideos();
         checkIfNeedMoreVideos();
 
       } catch (err) { console.error("Error loading videos:", err); }
-
       loading = false;
-    }
-
-    function observeLazyVideos() {
-      const lazyElements = document.querySelectorAll(".video-thumb");
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            const img = entry.target;
-            img.style.opacity = "1";
-            observer.unobserve(img);
-          }
-        });
-      }, { rootMargin: "200px 0px" });
-      lazyElements.forEach(el => observer.observe(el));
     }
 
     function addHoverPreview(container, videoId) {
@@ -254,7 +239,6 @@
     }
 
     loadVideos();
-
     window.addEventListener("scroll", () => {
       if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 300 && nextPageToken && !loading) {
         loadVideos();
