--- a/index.html
+++ b/index.html
@@ -1,274 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hit Play - Videos</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
-    body {
-      background: #000;
-      color: #fff;
-      font-family: 'Bebas Neue', Arial, sans-serif;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-    }
-
-    /* HERO */
-    .hero {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 2rem;
-    }
-
-    .hero-logo {
-      width: 200px;
-      max-width: 70%;
-      opacity: 0.9;
-      display: block;
-      margin: 0 auto;
-    }
-
-    /* VIDEOS */
-    .videos-section {
-      background: #111;
-      padding: 1rem;
-    }
-
-    .videos-section h2 {
-      font-size: 2.3rem;
-      margin-bottom: 1rem;
-    }
-
-    .video-list {
-      display: grid;
-      gap: 1rem;
-      padding: 0 1rem;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      justify-content: center;
-    }
-
-    @media (min-width: 1024px) {
-      .video-list { grid-template-columns: repeat(4, 1fr); }
-    }
-
-    .video-item {
-      background: #000;
-      position: relative;
-      overflow: hidden;
-      cursor: pointer;
-      width: 100%;
-      border-radius: 10px;
-      transition: transform 0.3s ease, opacity 0.5s ease;
-      opacity: 0;
-    }
-
-    .video-item.visible { opacity: 1; }
-
-    .video-thumb, iframe {
-      width: 100%;
-      aspect-ratio: 16/9;
-      border-radius: 10px;
-      object-fit: cover;
-      display: block;
-      transition: transform 0.3s ease, opacity 0.3s ease;
-    }
-
-    .video-item:hover .video-thumb {
-      transform: scale(1.03);
-      opacity: 0.95;
-    }
-
-    .play-overlay {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 4rem;
-      color: rgba(255,255,255,0.85);
-      pointer-events: none;
-      text-shadow: 0 0 20px #000;
-    }
-
-    .video-title {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      padding: 0.3rem 0.5rem;
-      color: #fff;
-      font-size: 0.9rem;
-      text-align: center;
-      white-space: normal;
-      line-height: 1.2;
-      border-bottom-left-radius: 10px;
-      border-bottom-right-radius: 10px;
-      background: linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0));
-    }
-
-    .footer {
-      padding: 2rem 1rem;
-      font-size: 1.2rem;
-    }
-
-    .footer a {
-      color: #00aaff;
-      text-decoration: none;
-    }
-
-    .footer a:hover { text-decoration: underline; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Hit Play - Videos</title>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<style>
+  * { margin:0; padding:0; box-sizing:border-box; }
+  body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff; text-align:center; }
+  .hero { padding:2rem; }
+  .hero-logo { width:200px; max-width:70%; margin:0 auto; display:block; }
+  .videos-section { background:#111; padding:1rem; }
+  .videos-section h2 { font-size:2.3rem; margin-bottom:1rem; }
+  .video-list { display:grid; gap:1rem; padding:0 1rem; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); justify-content:center; }
+  @media (min-width:1024px) { .video-list { grid-template-columns:repeat(4,1fr); } }
+  .video-item { position:relative; cursor:pointer; border-radius:10px; overflow:hidden; background:#000; }
+  .video-thumb, iframe { width:100%; aspect-ratio:16/9; object-fit:cover; display:block; border-radius:10px; transition:transform 0.3s ease; }
+  .video-item:hover .video-thumb { transform:scale(1.03); }
+  .play-overlay { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:4rem; color:rgba(255,255,255,0.85); pointer-events:none; text-shadow:0 0 20px #000; }
+  .video-title { position:absolute; bottom:0; left:0; width:100%; padding:0.3rem 0.5rem; color:#fff; font-size:0.9rem; line-height:1.2; background:linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0)); white-space:normal; border-bottom-left-radius:10px; border-bottom-right-radius:10px; }
+  .footer { padding:2rem 1rem; font-size:1.2rem; }
+  .footer a { color:#00aaff; text-decoration:none; }
+  .footer a:hover { text-decoration:underline; }
+</style>
 </head>
 <body>
 
-  <!-- HERO -->
-  <div class="hero" id="heroLogoContainer"></div>
+<div class="hero" id="heroLogoContainer"></div>
 
-  <!-- VIDEOS -->
-  <div class="videos-section">
-    <h2>VIDEOS</h2>
-    <div id="videoList" class="video-list"></div>
-  </div>
+<div class="videos-section">
+  <h2>VIDEOS</h2>
+  <div id="videoList" class="video-list"></div>
+</div>
 
-  <!-- FOOTER -->
-  <div class="footer">
-    More from the 
-    <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank">
-      Florida Punk Archivist
-    </a>
-  </div>
+<div class="footer">
+  More from the 
+  <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank">
+    Florida Punk Archivist
+  </a>
+</div>
 
-  <script src="https://www.youtube.com/iframe_api"></script>
+<script>
+const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";
+const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
 
-  <script>
-    const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";
-    const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
+let nextPageToken = "";
+let loading = false;
+const videoListDiv = document.getElementById("videoList");
+const heroLogoContainer = document.getElementById("heroLogoContainer");
 
-    let nextPageToken = "";
-    let loading = false;
-    const videoListDiv = document.getElementById("videoList");
-    const heroLogoContainer = document.getElementById("heroLogoContainer");
-    const players = {};
-
-    // Load channel logo
-    async function loadChannelLogo() {
-      try {
-        const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`);
-        const data = await res.json();
-        if (data.items && data.items.length > 0) {
-          const logoUrl = data.items[0].snippet.thumbnails.high.url;
-          const img = document.createElement("img");
-          img.src = logoUrl;
-          img.alt = "Channel Logo";
-          img.className = "hero-logo";
-          heroLogoContainer.appendChild(img);
-        }
-      } catch (err) { console.error("Error fetching channel logo:", err); }
+// Lazy load observer
+const lazyObserver = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if(entry.isIntersecting){
+      const img = entry.target;
+      img.src = img.dataset.src;
+      lazyObserver.unobserve(img);
     }
-    loadChannelLogo();
+  });
+},{ rootMargin:"200px 0px" });
 
-    async function loadVideos() {
-      if (loading) return;
-      loading = true;
+// Load channel logo
+async function loadChannelLogo() {
+  try {
+    const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`);
+    const data = await res.json();
+    if(data.items && data.items.length>0){
+      const logoUrl = data.items[0].snippet.thumbnails.high.url;
+      const img = document.createElement("img");
+      img.src = logoUrl;
+      img.alt = "Channel Logo";
+      img.className = "hero-logo";
+      heroLogoContainer.appendChild(img);
+    }
+  } catch(err){ console.error(err); }
+}
+loadChannelLogo();
 
-      const url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id&order=date&maxResults=50&pageToken=${nextPageToken}`;
+// Load videos
+async function loadVideos(){
+  if(loading) return;
+  loading = true;
+  const url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id&order=date&maxResults=20&pageToken=${nextPageToken}`;
+  try{
+    const res = await fetch(url);
+    const data = await res.json();
+    nextPageToken = data.nextPageToken || "";
 
-      try {
-        const res = await fetch(url);
-        const data = await res.json();
-        nextPageToken = data.nextPageToken || "";
+    data.items.forEach(item=>{
+      if(item.id.kind==="youtube#video" && item.snippet && item.snippet.liveBroadcastContent==="none"){
+        const vid = item.id.videoId;
+        const thumbUrl = item.snippet.thumbnails.maxres?.url || item.snippet.thumbnails.high.url;
 
-        data.items.forEach(item => {
-          if (item.id.kind === "youtube#video" && item.snippet && item.snippet.liveBroadcastContent === "none") {
-            const vid = item.id.videoId;
-            const thumb = item.snippet.thumbnails.maxres?.url || item.snippet.thumbnails.high.url;
+        const container = document.createElement("div");
+        container.className="video-item";
+        container.innerHTML=`
+          <img class="video-thumb" data-src="${thumbUrl}" alt="">
+          <div class="play-overlay">▶</div>
+          <div class="video-title">${item.snippet.title}</div>
+        `;
+        videoListDiv.appendChild(container);
 
-            const container = document.createElement("div");
-            container.className = "video-item";
-            container.dataset.videoid = vid;
-            container.innerHTML = `
-              <img class="video-thumb" src="${thumb}" alt="">
-              <div class="play-overlay">▶</div>
-              <div class="video-title">${item.snippet.title}</div>
-            `;
-            videoListDiv.appendChild(container);
+        const img = container.querySelector(".video-thumb");
+        lazyObserver.observe(img);
 
-            // Fade-in
-            setTimeout(() => container.classList.add("visible"), 50);
+        container.addEventListener("click",()=>{
+          const iframe = document.createElement("iframe");
+          iframe.src=`https://www.youtube.com/embed/${vid}?autoplay=1`;
+          iframe.allowFullscreen = true;
+          iframe.style.width="100%";
+          iframe.style.height="100%";
+          container.innerHTML="";
+          container.appendChild(iframe);
+        });
 
-            // Hover preview for desktop
-            if (window.innerWidth >= 768) {
-              container.addEventListener("mouseenter", () => addHoverPreview(container, vid));
-              container.addEventListener("mouseleave", () => removeHoverPreview(container));
+        // Hover preview for desktop
+        if(window.innerWidth>=768){
+          container.addEventListener("mouseenter",()=>{
+            if(!container.querySelector("iframe.preview")){
+              const preview = document.createElement("iframe");
+              preview.className="preview";
+              preview.src=`https://www.youtube.com/embed/${vid}?autoplay=1&mute=1&controls=0&loop=1&playlist=${vid}`;
+              preview.style.width="100%";
+              preview.style.height="100%";
+              preview.style.position="absolute";
+              preview.style.top=0;
+              preview.style.left=0;
+              preview.style.pointerEvents="none";
+              container.appendChild(preview);
             }
-
-            container.addEventListener("click", () => playVideo(vid, container));
-          }
-        });
-
-        checkIfNeedMoreVideos();
-
-      } catch (err) { console.error("Error loading videos:", err); }
-      loading = false;
-    }
-
-    function addHoverPreview(container, videoId) {
-      if (container.querySelector("iframe.preview")) return;
-      const iframe = document.createElement("iframe");
-      iframe.className = "preview";
-      iframe.src = `https://www.youtube.com/embed/${videoId}?autoplay=1&mute=1&controls=0&modestbranding=1&loop=1&playlist=${videoId}`;
-      container.appendChild(iframe);
-    }
-
-    function removeHoverPreview(container) {
-      const preview = container.querySelector("iframe.preview");
-      if (preview) preview.remove();
-    }
-
-    function playVideo(videoId, container) {
-      Object.keys(players).forEach(id => players[id].pauseVideo());
-
-      if (players[videoId]) {
-        players[videoId].playVideo();
-      } else {
-        container.innerHTML = '';
-        const playerDiv = document.createElement("div");
-        playerDiv.id = `player-${videoId}`;
-        container.appendChild(playerDiv);
-
-        players[videoId] = new YT.Player(`player-${videoId}`, {
-          videoId: videoId,
-          width: '100%',
-          height: '100%',
-          playerVars: { autoplay: 1, modestbranding: 1, rel: 0 }
-        });
-      }
-    }
-
-    function checkIfNeedMoreVideos() {
-      if (nextPageToken && !loading && document.body.offsetHeight < window.innerHeight + 300) {
-        loadVideos();
-      }
-    }
-
-    loadVideos();
-    window.addEventListener("scroll", () => {
-      if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 300 && nextPageToken && !loading) {
-        loadVideos();
+          });
+          container.addEventListener("mouseleave",()=>{
+            const preview = container.querySelector("iframe.preview");
+            if(preview) preview.remove();
+          });
+        }
       }
     });
-    window.addEventListener("resize", checkIfNeedMoreVideos);
-    window.addEventListener("load", checkIfNeedMoreVideos);
 
-    function onYouTubeIframeAPIReady() {}
-  </script>
+  }catch(err){ console.error(err); }
+  loading=false;
+}
+
+// Infinite scroll
+window.addEventListener("scroll",()=>{
+  if(window.innerHeight + window.scrollY >= document.body.offsetHeight-300 && nextPageToken && !loading){
+    loadVideos();
+  }
+});
+
+loadVideos();
+</script>
 
 </body>
 </html>
