--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
 <title>Hit Play - Videos</title>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 <style>
-  * { margin:0; padding:0; box-sizing:border-box; }
-  body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff; text-align:center; }
-  .hero { padding:2rem; }
-  .hero-logo { width:200px; max-width:70%; margin:0 auto; display:block; }
-  .videos-section { background:#111; padding:1rem; }
-  .videos-section h2 { font-size:2.3rem; margin-bottom:1rem; }
-  .video-list { display:grid; gap:1rem; padding:0 1rem; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); justify-content:center; }
-  @media (min-width:1024px) { .video-list { grid-template-columns:repeat(4,1fr); } }
-  .video-item { position:relative; cursor:pointer; border-radius:10px; overflow:hidden; background:#000; }
-  .video-thumb, iframe { width:100%; aspect-ratio:16/9; object-fit:cover; display:block; border-radius:10px; transition:transform 0.3s ease; }
-  .video-item:hover .video-thumb { transform:scale(1.03); }
-  .play-overlay { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:4rem; color:rgba(255,255,255,0.85); pointer-events:none; text-shadow:0 0 20px #000; }
-  .video-title { position:absolute; bottom:0; left:0; width:100%; padding:0.3rem 0.5rem; color:#fff; font-size:0.9rem; line-height:1.2; background:linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0)); white-space:normal; border-bottom-left-radius:10px; border-bottom-right-radius:10px; }
-  .footer { padding:2rem 1rem; font-size:1.2rem; }
-  .footer a { color:#00aaff; text-decoration:none; }
-  .footer a:hover { text-decoration:underline; }
+* { margin:0; padding:0; box-sizing:border-box; }
+body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff; text-align:center; }
+.hero { padding:2rem; }
+.hero-logo { width:200px; max-width:70%; margin:0 auto; display:block; }
+.videos-section { background:#111; padding:1rem; }
+.videos-section h2 { font-size:2.3rem; margin-bottom:1rem; }
+.video-list { display:grid; gap:1rem; padding:0 1rem; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); justify-content:center; }
+@media (min-width:1024px) { .video-list { grid-template-columns:repeat(4,1fr); } }
+.video-item { position:relative; cursor:pointer; border-radius:10px; overflow:hidden; background:#000; min-height:150px; }
+.video-thumb, iframe { width:100%; aspect-ratio:16/9; object-fit:cover; display:block; border-radius:10px; }
+.play-overlay { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:4rem; color:rgba(255,255,255,0.85); pointer-events:none; text-shadow:0 0 20px #000; }
+.video-title { position:absolute; bottom:0; left:0; width:100%; padding:0.3rem 0.5rem; color:#fff; font-size:0.9rem; line-height:1.2; background:linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0)); white-space:normal; border-bottom-left-radius:10px; border-bottom-right-radius:10px; }
+.footer { padding:2rem 1rem; font-size:1.2rem; }
+.footer a { color:#00aaff; text-decoration:none; }
+.footer a:hover { text-decoration:underline; }
 </style>
 </head>
 <body>
@@ -54,7 +53,10 @@ const lazyObserver = new IntersectionObserver(entries => {
   entries.forEach(entry => {
     if(entry.isIntersecting){
       const img = entry.target;
-      img.src = img.dataset.src;
+      if(img.dataset.src){
+        img.src = img.dataset.src;
+        img.removeAttribute('data-src');
+      }
       lazyObserver.unobserve(img);
     }
   });
@@ -104,6 +106,7 @@ async function loadVideos(){
         const img = container.querySelector(".video-thumb");
         lazyObserver.observe(img);
 
+        // Click to play
         container.addEventListener("click",()=>{
           const iframe = document.createElement("iframe");
           iframe.src=`https://www.youtube.com/embed/${vid}?autoplay=1`;
