--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@ body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff;
 </div>
 
 <script>
-const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";
+const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8"; 
 const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
 
+let uploadsPlaylistId = "";
 let nextPageToken = "";
 let loading = false;
+
 const videoListDiv = document.getElementById("videoList");
 const heroLogoContainer = document.getElementById("heroLogoContainer");
 
@@ -62,97 +64,99 @@ const lazyObserver = new IntersectionObserver(entries => {
   });
 },{ rootMargin:"200px 0px" });
 
-// Load channel logo
-async function loadChannelLogo() {
+// Load channel logo and uploads playlist ID
+async function loadChannelData() {
   try {
-    const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`);
+    const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet,contentDetails&id=${CHANNEL_ID}&key=${API_KEY}`);
     const data = await res.json();
     if(data.items && data.items.length>0){
-      const logoUrl = data.items[0].snippet.thumbnails.high.url;
+      const channel = data.items[0];
+      const logoUrl = channel.snippet.thumbnails.high.url;
       const img = document.createElement("img");
       img.src = logoUrl;
       img.alt = "Channel Logo";
       img.className = "hero-logo";
       heroLogoContainer.appendChild(img);
+
+      uploadsPlaylistId = channel.contentDetails.relatedPlaylists.uploads;
+      loadVideos(); // start loading videos once we have the uploads playlist
     }
   } catch(err){ console.error(err); }
 }
-loadChannelLogo();
+loadChannelData();
 
-// Load videos
-async function loadVideos(){
-  if(loading) return;
+// Load videos from uploads playlist
+async function loadVideos() {
+  if(loading || !uploadsPlaylistId) return;
   loading = true;
-  const url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id&order=date&maxResults=20&pageToken=${nextPageToken}`;
-  try{
+
+  const url = `https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&playlistId=${uploadsPlaylistId}&maxResults=10&pageToken=${nextPageToken}&key=${API_KEY}`;
+  try {
     const res = await fetch(url);
     const data = await res.json();
     nextPageToken = data.nextPageToken || "";
 
-    data.items.forEach(item=>{
-      if(item.id.kind==="youtube#video" && item.snippet && item.snippet.liveBroadcastContent==="none"){
-        const vid = item.id.videoId;
-        const thumbUrl = item.snippet.thumbnails.maxres?.url || item.snippet.thumbnails.high.url;
+    data.items.forEach(item => {
+      const vid = item.snippet.resourceId.videoId;
+      const thumbUrl = item.snippet.thumbnails.maxres?.url || item.snippet.thumbnails.high.url;
+      const title = item.snippet.title;
 
-        const container = document.createElement("div");
-        container.className="video-item";
-        container.innerHTML=`
-          <img class="video-thumb" data-src="${thumbUrl}" alt="">
-          <div class="play-overlay">▶</div>
-          <div class="video-title">${item.snippet.title}</div>
-        `;
-        videoListDiv.appendChild(container);
+      const container = document.createElement("div");
+      container.className = "video-item";
+      container.innerHTML = `
+        <img class="video-thumb" data-src="${thumbUrl}" alt="">
+        <div class="play-overlay">▶</div>
+        <div class="video-title">${title}</div>
+      `;
+      videoListDiv.appendChild(container);
 
-        const img = container.querySelector(".video-thumb");
-        lazyObserver.observe(img);
+      const img = container.querySelector(".video-thumb");
+      lazyObserver.observe(img);
 
-        // Click to play
-        container.addEventListener("click",()=>{
-          const iframe = document.createElement("iframe");
-          iframe.src=`https://www.youtube.com/embed/${vid}?autoplay=1`;
-          iframe.allowFullscreen = true;
-          iframe.style.width="100%";
-          iframe.style.height="100%";
-          container.innerHTML="";
-          container.appendChild(iframe);
+      // Click to play
+      container.addEventListener("click", () => {
+        const iframe = document.createElement("iframe");
+        iframe.src = `https://www.youtube.com/embed/${vid}?autoplay=1`;
+        iframe.allowFullscreen = true;
+        iframe.style.width = "100%";
+        iframe.style.height = "100%";
+        container.innerHTML = "";
+        container.appendChild(iframe);
+      });
+
+      // Hover preview on desktop
+      if(window.innerWidth >= 768){
+        container.addEventListener("mouseenter", () => {
+          if(!container.querySelector("iframe.preview")){
+            const preview = document.createElement("iframe");
+            preview.className = "preview";
+            preview.src = `https://www.youtube.com/embed/${vid}?autoplay=1&mute=1&controls=0&loop=1&playlist=${vid}`;
+            preview.style.width = "100%";
+            preview.style.height = "100%";
+            preview.style.position = "absolute";
+            preview.style.top = 0;
+            preview.style.left = 0;
+            preview.style.pointerEvents = "none";
+            container.appendChild(preview);
+          }
         });
-
-        // Hover preview for desktop
-        if(window.innerWidth>=768){
-          container.addEventListener("mouseenter",()=>{
-            if(!container.querySelector("iframe.preview")){
-              const preview = document.createElement("iframe");
-              preview.className="preview";
-              preview.src=`https://www.youtube.com/embed/${vid}?autoplay=1&mute=1&controls=0&loop=1&playlist=${vid}`;
-              preview.style.width="100%";
-              preview.style.height="100%";
-              preview.style.position="absolute";
-              preview.style.top=0;
-              preview.style.left=0;
-              preview.style.pointerEvents="none";
-              container.appendChild(preview);
-            }
-          });
-          container.addEventListener("mouseleave",()=>{
-            const preview = container.querySelector("iframe.preview");
-            if(preview) preview.remove();
-          });
-        }
+        container.addEventListener("mouseleave", () => {
+          const preview = container.querySelector("iframe.preview");
+          if(preview) preview.remove();
+        });
       }
     });
 
-  }catch(err){ console.error(err); }
-  loading=false;
+  } catch(err){ console.error(err); }
+  loading = false;
 }
 
 // Infinite scroll
-window.addEventListener("scroll",()=>{
+window.addEventListener("scroll", () => {
   if(window.innerHeight + window.scrollY >= document.body.offsetHeight-300 && nextPageToken && !loading){
     loadVideos();
   }
 });
-
-loadVideos();
 </script>
 
 </body>
