--- a/index.html
+++ b/index.html
@@ -12,8 +12,30 @@ body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff;
 .hero-logo { width:200px; max-width:70%; margin:0 auto; display:block; }
 .videos-section { background:#111; padding:1rem; }
 .videos-section h2 { font-size:2.3rem; margin-bottom:1rem; }
-.video-list { display:grid; gap:1rem; padding:0 1rem; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); justify-content:center; }
-@media (min-width:1024px) { .video-list { grid-template-columns:repeat(4,1fr); } }
+
+.video-list {
+  display:grid;
+  gap:1rem; /* default small gap for mobile portrait */
+  padding:0 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  justify-content:center;
+}
+
+/* Medium screens / landscape phones / tablets */
+@media (min-width:768px) {
+  .video-list {
+    gap:1.5rem; /* slightly larger gap in landscape */
+  }
+}
+
+/* Desktop / large landscape / 1080p+ */
+@media (min-width:1024px) {
+  .video-list {
+    grid-template-columns: repeat(4,1fr);
+    gap:2rem; /* more spacing between videos */
+  }
+}
+
 .video-item { position:relative; cursor:pointer; border-radius:10px; overflow:hidden; background:#000; min-height:150px; }
 .video-thumb, iframe { width:100%; aspect-ratio:16/9; object-fit:cover; display:block; border-radius:10px; }
 .play-overlay { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:4rem; color:rgba(255,255,255,0.85); pointer-events:none; text-shadow:0 0 20px #000; }
