--- a/index.html
+++ b/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Hit Play - Videos</title>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
 body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff; text-align:center; }
 .hero { padding:2rem; }
-.hero-logo { width:200px; max-width:70%; margin:0 auto; display:block; }
+.hero-logo { width:200px; max-width:70%; display:block; margin:0 auto; }
 
-/* VIDEOS */
+/* Videos Section */
 .videos-section { background:#111; padding:1rem; }
 .videos-section h2 { font-size:2.3rem; margin-bottom:1rem; }
+
 .video-list {
   display:grid;
-  gap:1rem; /* small mobile gap */
+  gap:0.8rem;
+  grid-template-columns:1fr; /* default for small screens */
   padding:0 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
-@media (min-width:768px){ .video-list { gap:1.5rem; } }
+
+@media (min-width:480px){ .video-list { grid-template-columns:repeat(2,1fr); gap:1rem; } }
+@media (min-width:768px){ .video-list { grid-template-columns:repeat(3,1fr); gap:1.5rem; } }
 @media (min-width:1024px){ .video-list { grid-template-columns:repeat(4,1fr); gap:2rem; } }
 
-.video-item { position:relative; border-radius:10px; overflow:hidden; background:#000; cursor:pointer; min-height:150px; }
+.video-item { position:relative; border-radius:10px; overflow:hidden; background:#000; cursor:pointer; }
 .video-thumb, iframe { width:100%; aspect-ratio:16/9; object-fit:cover; display:block; border-radius:10px; }
-.play-overlay { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:4rem; color:rgba(255,255,255,0.85); pointer-events:none; text-shadow:0 0 20px #000; }
-.video-title { position:absolute; bottom:0; left:0; width:100%; padding:0.3rem 0.5rem; color:#fff; font-size:0.9rem; line-height:1.2; background:linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0)); white-space:normal; border-bottom-left-radius:10px; border-bottom-right-radius:10px; }
+.play-overlay { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:3rem; color:rgba(255,255,255,0.85); pointer-events:none; text-shadow:0 0 20px #000; }
+.video-title {
+  position:absolute; bottom:0; left:0; width:100%;
+  padding:0.3rem 0.5rem; color:#fff; font-size:0.9rem; line-height:1.2;
+  background:linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0));
+  white-space:normal;
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
+}
+
 .footer { padding:2rem 1rem; font-size:1.2rem; }
 .footer a { color:#00aaff; text-decoration:none; }
 .footer a:hover { text-decoration:underline; }
@@ -34,13 +45,16 @@ body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff;
 </head>
 <body>
 
+<!-- Hero / Channel Logo -->
 <div class="hero" id="heroLogoContainer"></div>
 
+<!-- Videos Section -->
 <div class="videos-section">
   <h2>VIDEOS</h2>
   <div id="videoList" class="video-list"></div>
 </div>
 
+<!-- Footer -->
 <div class="footer">
   More from the 
   <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank">
@@ -49,9 +63,8 @@ body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff;
 </div>
 
 <script>
-const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";
+const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8"; // <-- replace with your key
 const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
-
 let nextPageToken = "";
 let loading = false;
 
@@ -63,7 +76,7 @@ const lazyObserver = new IntersectionObserver(entries=>{
   entries.forEach(entry=>{
     if(entry.isIntersecting){
       const img = entry.target;
-      if(img.dataset.src){ img.src=img.dataset.src; img.removeAttribute('data-src'); }
+      if(img.dataset.src){ img.src = img.dataset.src; img.removeAttribute('data-src'); }
       lazyObserver.unobserve(img);
     }
   });
@@ -71,7 +84,7 @@ const lazyObserver = new IntersectionObserver(entries=>{
 
 // Load channel logo
 async function loadChannelLogo(){
-  try {
+  try{
     const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`);
     const data = await res.json();
     if(data.items && data.items.length>0){
@@ -82,18 +95,21 @@ async function loadChannelLogo(){
       img.className="hero-logo";
       heroLogoContainer.appendChild(img);
     }
-  } catch(err){ console.error(err); }
+  }catch(err){ console.error(err); }
 }
 
-// Load videos using search endpoint
+// Load videos
 async function loadVideos(maxResults=10){
   if(loading) return;
   loading=true;
-  const url=`https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id&type=video&order=date&maxResults=${maxResults}&pageToken=${nextPageToken}`;
-  try {
-    const res=await fetch(url);
-    const data=await res.json();
+
+  const url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id&type=video&order=date&maxResults=${maxResults}&pageToken=${nextPageToken}`;
+
+  try{
+    const res = await fetch(url);
+    const data = await res.json();
     nextPageToken = data.nextPageToken || "";
+
     data.items.forEach(item=>{
       if(item.snippet.liveBroadcastContent==="none"){
         const vid = item.id.videoId;
@@ -110,46 +126,25 @@ async function loadVideos(maxResults=10){
         videoListDiv.appendChild(container);
         lazyObserver.observe(container.querySelector(".video-thumb"));
 
-        // Click to replace thumbnail with iframe
-        container.addEventListener("click",()=>{
-          const iframe=document.createElement("iframe");
-          iframe.src=`https://www.youtube.com/embed/${vid}?autoplay=1`;
+        // Click thumbnail -> iframe
+        container.addEventListener("click", ()=>{
+          const iframe = document.createElement("iframe");
+          iframe.src = `https://www.youtube.com/embed/${vid}?autoplay=1`;
           iframe.allowFullscreen=true;
           container.innerHTML="";
           container.appendChild(iframe);
         });
-
-        // Desktop hover preview
-        if(window.innerWidth>=768){
-          container.addEventListener("mouseenter",()=>{
-            if(!container.querySelector("iframe.preview")){
-              const preview=document.createElement("iframe");
-              preview.className="preview";
-              preview.src=`https://www.youtube.com/embed/${vid}?autoplay=1&mute=1&controls=0&loop=1&playlist=${vid}`;
-              preview.style.width="100%";
-              preview.style.height="100%";
-              preview.style.position="absolute";
-              preview.style.top=0;
-              preview.style.left=0;
-              preview.style.pointerEvents="none";
-              container.appendChild(preview);
-            }
-          });
-          container.addEventListener("mouseleave",()=>{
-            const preview=container.querySelector("iframe.preview");
-            if(preview) preview.remove();
-          });
-        }
       }
     });
-  } catch(err){ console.error(err); }
+  }catch(err){ console.error(err); }
+
   loading=false;
 }
 
 // Infinite scroll
-window.addEventListener("scroll", async()=>{
+window.addEventListener("scroll", ()=>{
   if(window.innerHeight + window.scrollY >= document.body.offsetHeight - 300 && nextPageToken && !loading){
-    await loadVideos();
+    loadVideos();
   }
 });
 
